force-app/main/default/objects/Account/fields/MatchingCity__c.field-meta.xml
<CustomField>
    <fullName>MatchingCity__c</fullName>
    <label>Matching City</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>