force-app/main/default/objects/Account/fields/Test_calculation__c.field-meta.xml
<CustomField>
    <fullName>Test_calculation__c</fullName>
    <formula>Test_Percent__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>