force-app/main/default/objects/Account/validationRules/Validate_account_update.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_account_update</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( BillingCity )</errorConditionFormula>
    <errorMessage>You dont have access to update the billing city.</errorMessage>
</ValidationRule>